# IndepdentStudy_SLAM

./: SLAM_4DVar_Equations.ipynb
Burgers/: .gitignore  Burgers.cpp  Burgers.h  Class_Components.txt  HOW_TO_COMPILE_RUN.txt  Makefile  Observation.cpp  Observation.h  README.txt  test.cpp  test.x  test_obs.cpp
Burgers/PyODE/: burgers.py
Burgers/build_ceres/: CMakeCache.txt  CMakeLists.txt  Ceres_Burgers  Makefile  cmake_install.cmake  obs_gen
Burgers/build_ceres/expt/nonoise_truth/: info.txt
Burgers/cov_gen/: FlexGenCov.py  fgcov_conf.json
Burgers/expt/: README
Burgers/expt/BtEstimate/: run_ensemble_ptb_fullwindow.py  run_ensemble_ptb_fullwindow_PyODE.py
Burgers/expt/QtEstimate/: README  run_ensemble_ptb.py  run_ensemble_ptb_fullwindow.py
Burgers/fake_obs/: FakeObs.py  FakeObsFrom3DVar.py  fakeobs_conf.json
Burgers/legacy/Ceres/: Burgers.cpp  Burgers.h  CMakeCache.txt  CMakeLists.txt  Ceres_Burgers  Ceres_Burgers.cpp  Makefile  Observation.cpp  Observation.h  cmake_install.cmake
Burgers/obs_gen/: FlexGenObs.py  burgers_1e-6_noise_obs_sample.csv  fgobs_conf.json  gen_obs.py  obs.csv
Burgers/obs_gen/legacy/: README.txt  gen_obs.py
Burgers/python/: plot_burgers.ipynb
Burgers/rand_gen/: FlexGenCov.py  FlexGenRand.py  fgcov_conf.json  fgrandom_conf.json
Burgers/scripts/: AddGaussianNoise.py  ExtractAPeriod.py  GenCosWave.py  LinkAllQt.py  QuickPlotATimeStep.py  QuickPlots.py  QuickPlots_withInitGuess.py  ShortSummaryDiff.py  XTInterpolate.py  plot_burgers.py
Burgers/src/: Burgers.cpp  Burgers.h  Observation.cpp  Observation.h  a.out  burgers_4dvar.cpp  burgers_4dvar.h  burgers_conf.in  burgers_slam.cpp  burgers_slam.h  compile.sh  run_burgers.cpp  run_burgers_4dvar.cpp  run_burgers_slam.cpp  template.conf  test.cpp  test_cpp.cpp  test_obs.cpp  test_obstimegrouper.cpp  test_output.conf
Burgers/src/obsolete/: Ceres_Burgers.cpp
Burgers/test/: README.txt
Burgers/test/hires_run/: burgers_conf.in  burgers_conf.out
Burgers/test/normal_run/: burgers_conf.in
Burgers/test/obs_gen_test/: obs.csv
Burgers/test/perturbed_run/: burgers_conf.out
Burgers/test_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CERES/hello_world/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloworld  helloworld.cc
Equations/: SLAM_4DVar_Equations.ipynb  SLAM_burgers.ipynb
Equations/.ipynb_checkpoints/: SLAM_4DVar_Equations-checkpoint.ipynb  SLAM_burgers-checkpoint.ipynb
analytical/: analytical.ipynb
analytical/.ipynb_checkpoints/: analytical-checkpoint.ipynb
analytical/numeric_run/: burgers_conf.in  burgers_conf.out  numerics.ipynb  run_burgers.x
burgers_equation/: SLAM_burgers.ipynb
(+790 files in other folders)
